# synergia2

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.orig  PhysicsConstants2py.sh  README  README.md  RTML_common.xsif  SC_match_tracking.py  TODO  analyze_test6_out.py  analyze_test6_out2.py  apply_map.cc  beam_parameters.py  booster_classic.lat  bunch.py  chef_propagate.cc  cmake-cmd  cmake_log  cmakelog  component-breakdown.py  computational_grid.py  configure  density_plot.py  diagnostics.py  do_compare_channel.py  eescalator.xsif  empty  ertelements.py  ertelements_matched.py  ertml.lat  ertml_filecalls_4match.xsif  ertml_fish.py  ertml_test.py  ertml_xsif_fish.py  field.py  (+47 more)
archived-applications/booster/: .gitignore  CMakeLists.txt  booster.py  boosterMADbyKIYOMI.lat  boosterMADbyKIYOMI_sbend.lat  booster_0.5.lat  booster_2012.lat  booster_Leo_sbend.lat  booster_chm10vm5.lat  booster_chm15vm5.lat  booster_new.xml  booster_newtunes.lat  booster_options.h  booster_options.py  booster_petrenko.lat  booster_petrenko_zero.lat  booster_xml.py  cxx_booster.cc  cxx_booster_resume.cc  input_options  input_resume_options  machine_parameters.sdds  run_booster.sh
archived-applications/cxx_benchmark/: .gitignore  CMakeLists.txt  benchmark.cc  benchmark.py  benchmark2d.cc  benchmark_options.cc  benchmark_options.h  benchmark_options.py  bunchgen.cc  cxx_covariance_matrix.txt  cxx_covariance_matrix.xml  cxx_lattice.xml  cxx_means.xml  cxx_read_binary.cc  cxx_write_binary.cc  cxx_write_xml.cc  fodo.madx  read_xml.cc  s3_sis18.cc  sis18-6.lsx  write_xml.py
archived-applications/cxx_checkpoint/: CMakeLists.txt  cxx_checkpoint.cc
archived-applications/cxx_test/: .gitignore  CMakeLists.txt  cxx_example.cc
archived-applications/iota/: CMakeLists.txt  bunch_txt_to_h5.py  cxx_iota.cc  cxx_iota_resume.cc  input_options  input_resume_options  iota_options.h  iota_xml.py  run_iota.sh
archived-applications/modes_study/: CMakeLists.txt  cxx_modes.cc  cxx_modes_resume.cc  diagnostics_deltae_particles.cc  diagnostics_deltae_particles.h  excite_mode_actions.cc  excite_mode_actions.h  modes_options.h  modes_xml.py  ofoeoroeodo.lat  run_modes.sh
archived-applications/normal_forms/: .gitignore  CMakeLists.txt  cxx_lattice.xml  normal_form_example.cc  normal_form_example.py  normal_form_mi.cc  print_one_turn_map.cc
archived-applications/s3_test/: CMakeLists.txt  fodo.madx  s3_test.cc
components/bunch/: CMakeLists.txt  bunch.cc  bunch.h  bunch_wrap.cc  diagnostics.cc  diagnostics.h  diagnostics_writer.cc  diagnostics_writer.h  fixed_t_z_converter.cc  populate.cc  populate.h
components/collective/: CMakeLists.txt  deposit.cc  deposit.h  distributed_rectangular_grid.cc  distributed_rectangular_grid.h  rectangular_grid.cc  rectangular_grid.h  rectangular_grid_domain.cc  rectangular_grid_domain.h  space_charge_3d_open_hockney.cc  space_charge_3d_open_hockney.h
components/foundation/: CMakeLists.txt  distribution.cc  distribution.h  foundation_wrap.cc  four_momentum.cc  four_momentum.h  math_constants.h  physical_constants.h  reference_particle.cc  reference_particle.h
components/lattice/: CMakeLists.txt  chef_lattice.cc  chef_lattice.h  chef_utils.cc  chef_utils.h  demo.cc  element_adaptor.cc  element_adaptor.h  fodo.lat  four_momentum.cc  four_momentum.h  jfaparse.py  lattice.cc  lattice.h  lattice_element.cc  lattice_element.h  lattice_element_adaptor.cc  lattice_element_adaptor.h  lattice_element_slice.cc  lattice_element_slice.h  lattice_wrap.cc  mad8_parser.py  mad8_reader.py  uses_array_nd_wrap.cc
components/simulation/: CMakeLists.txt  chef_propagate.cc  chef_propagate.h  fast_mapping.cc  fast_mapping.h  step.cc  (+16 more)
docs/: .gitignore  CMakeLists.txt  generate-module-rst.py  remove-empty-quotes.py  run-pdflatex  synergia.cfg  synergia.cfg.in  update-modules-rst  update-synergia-cfg  update_synergia_cfg
examples/: .gitignore  CMakeLists.txt
s2_fish/: .gitignore  BasErs_field.cc  BasErs_field.h  CMakeLists.txt  Double_tensor.cc  Double_tensor.h  GaussSC.cc  Makefile  Makefile.orig  TripleT.h  __init__.py  array_1d.h  array_2d.h  array_2d.tcc  array_2d_iterator.tcc  array_3d.h  array_3d.tcc  array_nd.h  array_nd.tcc  array_nd_iterator.tcc  array_nd_python.h  arrayio.py  closed_periodic_short_solver.m  communicate.cc  communicate.h  constraints.cc  constraints.h  constraints_wrap.cc  container_conversions.h  cylindrical.cc  cylindrical.h  cylindrical_wrap.cc  debug.m  debug1d.m  debug2d.m  debug3d.m  deposit.cc  deposit.h  display.py  electric_field.cc  (+103 more)
synergia/: CMakeLists.txt  __init__.py  apply_map.cc  beam_parameters.py  chef_propagate.cc  density_plot.py  diagnostics.py  envelope_matching.py  error_eater.cc  gourmet.py  hist2d.cc  job_manager.py  latticefns.py  loadfile.py  mappers.cc  matching.py  options.py  physics_constants.py  propagate.py  syn2_diagnostics.py  syn2_diagnostics_impact.py  tracker.py
synergia-script-templates/: CMakeLists.txt  cleanup  intrepid_multijob_header  job  job_example  job_example_hopper  job_example_jpsi_mvapich  job_example_pbs  job_example_wilson  job_example_workstation  job_intrepid  job_mira  job_tev  local_opts_example.py  local_opts_hopper.py  local_opts_intrepid.py  local_opts_mira.py  local_opts_wilson_example.py  mira_multijob_footer  mira_multijob_header  mira_multijob_subjob  mira_resumemulti_footer  mira_resumemulti_header  mira_resumemulti_subjob  multijob_example_header  resume_example_wilson  resume_mira  resumejob_example
utils/: CMakeLists.txt  commxx.cc  commxx.h  container_conversions.h  distributed_fft3d.cc  distributed_fft3d.h  floating_point.h  hdf5_chunked_array2d_writer.cc  hdf5_chunked_array2d_writer.h  hdf5_serial_writer.cc  hdf5_serial_writer.h  hdf5_serial_writer.tcc  hdf5_utils.h  hdf5_writer.cc  hdf5_writer.h  hdf5_writer.tcc  mpi_comm_wrap.cc  mpi_comm_wrap.h  multi_array_check_equal.h  multi_array_print.h  multi_array_serialization.h  multi_array_typedefs.h  numpy_multi_ref_converter.h  parallel_utils.cc  parallel_utils.h  parallel_utils_wrap.cc  xml_serialization.h
(+2487 files in other folders)
