add_subdirectory(s3_test)
add_subdirectory(s3_sis18)
add_subdirectory(electron_lens)
add_subdirectory(normal_form)
add_subdirectory(fodo)
add_subdirectory(fodo_cxx)
add_subdirectory(foborodobo32)
add_subdirectory(mi)
add_subdirectory(lattice_functions)
add_subdirectory(aperture_demo)
add_subdirectory(foborodobo32-accel)
